modified:   index.html

--- a/index.html
+++ b/index.html
@@ -66,12 +66,9 @@
         <div class="gallery-wrapper">
           <div class="gallery-content">
             <div>
-              <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
+              <h1>Empower. Educate. Succeed.</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Distinctio deleniti voluptatibus, alias impedit animi laborum
-                assumenda fuga, maxime quis, repellat culpa velit quas earum hic
-                nulla delectus. Temporibus, adipisci corrupti.
+                Transforming Students’ Lives Through Mentorship and Education.
               </p>
             </div>
           </div>
