modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
             <div>
               <h1>Empower. Educate. Succeed.</h1>
               <p>
-                Transforming Students’ Lives Through Mentorship and Education.
+                We transform students' lives through mentorship and education.
+                We connect underprivileged high school students with college
+                mentors, providing personalized support with academic and career
+                planning, college applications, and scholarship grants.
               </p>
+              <h5>
+                Join us in our mission to empower students and build a brighter
+                future for all.
+              </h5>
             </div>
           </div>
           <div class="gallery-images-box">
