--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">ScholarLink</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,10 +46,19 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link" href="#">Our Mentors</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Scholarship Grants</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Affiliates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Support Center</a>
             </li>
           </ul>
 
