--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">ScholarLink</a>
         <button
@@ -78,6 +78,7 @@
               <h1>Empower. Educate. Succeed.</h1>
               <p>
                 We transform students' lives through mentorship and education.
+                <br />
                 We connect underprivileged high school students with college
                 mentors, providing personalized support with academic and career
                 planning, college applications, and scholarship grants.
