--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     ></script>
 
     <link rel="stylesheet" href="style.css" />
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ScholarLink</a>
+        <a class="navbar-brand" href="#">
+          <img src="./assets/logo.png" style="height: 60px;" alt="owl">
+        </a>
         <button
           class="navbar-toggler"
           type="button"
