modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <link rel="stylesheet" href="style.css" />
     <!-- favicon  -->
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./assets/logo.png" style="height: 60px;" alt="owl">
+        <a class="navbar-brand mx-4" href="#">
+          <img src="./assets/logo.png" style="height: 60px" alt="owl" />
         </a>
         <button
           class="navbar-toggler"
@@ -44,7 +44,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
