--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
       <div class="container">
         <div class="gallery-wrapper">
           <div class="gallery-content">
-            <div>
+            <div class="hero-tag">
               <h1>Empower. Educate. Succeed.</h1>
               <p>
                 We transform students' lives through mentorship and education.
-                <br />
                 We connect underprivileged high school students with college
                 mentors, providing personalized support with academic and career
                 planning, college applications, and scholarship grants.
