--- a/index.html
+++ b/index.html
@@ -47,12 +47,19 @@
         <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="#"
+                onclick="setActiveLink(this)"
+                >Home</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
+                onclick="setActiveLink(this)"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -77,6 +84,7 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
+                onclick="setActiveLink(this)"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -94,6 +102,7 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
+                onclick="setActiveLink(this)"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -112,6 +121,7 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
+                onclick="setActiveLink(this)"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -131,6 +141,7 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
+                onclick="setActiveLink(this)"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -627,5 +638,7 @@
       </div>
     </section>
     <!-- end: Gallery Section -->
+
+    <script src="script.js"></script>
   </body>
 </html>
