modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
             </li>
           </ul>
 
-          <button class="btn btn-outline-primary mx-3" type="submit">
+          <button class="btn btn-signup custom-border mx-3" type="submit">
             Signup
           </button>
-          <button class="btn btn-outline-primary" type="submit">Login</button>
+          <button class="btn btn-login custom-border" type="submit">
+            Login
+          </button>
         </div>
       </div>
     </nav>
