--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="#">
-          <img src="./assets/logo.png" style="height: 60px" alt="owl" />
+          <img src="assets/logo.png" style="height: 60px" alt="owl" />
         </a>
         <button
           class="navbar-toggler"
