--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
                 Join us in our mission to empower students and build a brighter
                 future for all.
               </h5>
+              <div class="button-container my-4">
+                <button class="btn btn-primary" onclick="">
+                  Become A Mentor
+                </button>
+                <button class="btn btn-secondary ml-3" onclick="">
+                  Become An Affiliate
+                </button>
+              </div>
             </div>
           </div>
           <div class="gallery-images-box">
