modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                 future for all.
               </h5>
               <div class="button-container my-4">
-                <button class="btn btn-primary" onclick="">
+                <button class="btn cta-mentor" onclick="">
                   Become A Mentor
                 </button>
-                <button class="btn btn-secondary ml-3" onclick="">
+                <button class="btn ml-3 cta-affiliate" onclick="">
                   Become An Affiliate
                 </button>
               </div>
