modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -434,6 +434,70 @@
     </section>
     <!-- end: Gallery Section -->
 
+    <section>
+      <div class="container what-we-provide">
+        <h1 class="title">What We Provide?</h1>
+        <div class="wrapper">
+          <div class="line"></div>
+          <div class="card">
+            <span class="dot"></span>
+            <h3>Scholarship Grants</h3>
+            <p>
+              ScholarLink provides a comprehensive scholarship search and grant
+              matching service to underprivileged high school students. Our
+              platform offers personalized support to help students identify and
+              apply for scholarship opportunities that fit their individual
+              needs and interests. Our goal is to help students access the
+              financial resources they need to pursue higher education and
+              achieve their academic goals.
+            </p>
+          </div>
+          <div class="card">
+            <span class="dot"></span>
+            <h3>Mentorship</h3>
+            <p>
+              Our mentorship program is designed to empower students and help
+              them achieve their goals, no matter what challenges they may face.
+            </p>
+          </div>
+          <div class="card">
+            <span class="dot"></span>
+            <h3>Academic and Career Planning</h3>
+            <p>
+              Our team of experts helps students create a plan that fits their
+              individual needs and guides them through every step of the
+              process, from course selection to career exploration. Our goal is
+              to help students build a foundation for success and achieve their
+              dreams.
+            </p>
+          </div>
+          <div class="card">
+            <span class="dot"></span>
+            <h3>University / College Applications</h3>
+            <p>
+              Our goal is to help students put their best foot forward and
+              increase their chances of getting accepted to their dream schools.
+              We believe that every student deserves the opportunity to pursue
+              higher education, and we're committed to helping them achieve
+              their goals.
+            </p>
+          </div>
+
+          <div class="card">
+            <span class="dot"></span>
+            <h3>Personality Development Training</h3>
+            <p>
+              Our platform offers various tools and resources to help students
+              improve their communication skills, emotional intelligence, and
+              leadership abilities. Our goal is to help students develop the
+              personal qualities and skills needed to succeed in college,
+              career, and life.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
