modified:   index.html

--- a/index.html
+++ b/index.html
@@ -434,9 +434,10 @@
     </section>
     <!-- end: Gallery Section -->
 
+    <!-- start: What We Provide Section -->
     <section>
       <div class="container what-we-provide">
-        <h1 class="title">What We Provide?</h1>
+        <h1 class="title">What We Provide</h1>
         <div class="wrapper">
           <div class="line"></div>
           <div class="card">
@@ -497,6 +498,7 @@
         </div>
       </div>
     </section>
+    <!-- end: What We Provide Section -->
 
     <script src="script.js"></script>
   </body>
