modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -177,7 +177,13 @@
           <div class="gallery-content">
             <div class="hero-tag">
               <h1>Empower. Educate. Succeed.</h1>
-              <p>
+              <p
+                style="
+                  text-align: justify;
+                  font-weight: 600;
+                  margin-bottom: 24px;
+                "
+              >
                 We transform students' lives through mentorship and education.
                 We connect underprivileged high school students with college
                 mentors, providing personalized support with academic and career
