modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -450,13 +450,11 @@
             <span class="dot"></span>
             <h3>Scholarship Grants</h3>
             <p>
-              ScholarLink provides a comprehensive scholarship search and grant
-              matching service to underprivileged high school students. Our
-              platform offers personalized support to help students identify and
-              apply for scholarship opportunities that fit their individual
-              needs and interests. Our goal is to help students access the
-              financial resources they need to pursue higher education and
-              achieve their academic goals.
+              Our platform offers comprehensive and personalized support to help
+              students identify and apply for scholarship opportunities that fit
+              their individual needs and interests. Our goal is to help students
+              access the financial resources they need to pursue higher
+              education and achieve their academic goals.
             </p>
           </div>
           <div class="card">
