renamed:    style.css -> index.css 	modified:   index.html 	renamed:    script.js -> index.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
   </head>
@@ -504,6 +504,6 @@
     </section>
     <!-- end: What We Provide Section -->
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
