--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="index.css" />
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
@@ -503,6 +508,45 @@
       </div>
     </section>
     <!-- end: What We Provide Section -->
+
+    <!-- start: Counter Section -->
+    <section>
+      <div class="hero">
+        <div class="row">
+          <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
+          <div class="col">
+            <div class="counter-box">
+              <i class="fa fa-users"></i>
+              <h2 class="counter">215</h2>
+              <h4>Students Helped</h4>
+            </div>
+          </div>
+          <div class="col">
+            <div class="counter-box">
+              <i class="fa fa-globe"></i>
+              <h2 class="counter">101</h2>
+
+              <h4>Partner Organizations</h4>
+            </div>
+          </div>
+          <div class="col">
+            <div class="counter-box">
+              <i class="fa-solid fa-book-open-reader"></i>
+              <h2 class="counter">205</h2>
+              <h4>Scholarship Grants</h4>
+            </div>
+          </div>
+          <div class="col">
+            <div class="counter-box">
+              <i class="fa-solid fa-graduation-cap"></i>
+              <h2 class="counter">105</h2>
+              <h4>Succesful Graduates</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End: Counter Section -->
 
     <script src="index.js"></script>
   </body>
