modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
     <!-- start: Counter Section -->
     <section>
-      <div class="hero">
+      <div class="milestone-section">
         <div class="row">
           <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
           <div class="col">
