new file:   assets/mentor 1.jpg 	new file:   assets/mentor 2.jpg 	new file:   assets/mentor 3.jpg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -548,6 +548,59 @@
     </section>
     <!-- End: Counter Section -->
 
+    <!-- Start: Feature Mentor Section -->
+    <section>
+      <h1 class="title" style="margin-top: 3%">Our Featured Mentors</h1>
+      <h4 style="color: white; text-align: center; font-weight: 300">
+        <em>
+          Great mentors don't just teach, they inspire, motivate, and guide you
+          towards achieving your goals and realizing your full potential.
+        </em>
+      </h4>
+      <div class="featured-mentor">
+        <div class="card-feature">
+          <div class="imgbox">
+            <img src="assets/mentor 1.jpg" />
+          </div>
+
+          <div class="content">
+            <h2>Alex Seb</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              doloribus vitae fugit enim repudiandae
+            </p>
+          </div>
+        </div>
+        <div class="card-feature">
+          <div class="imgbox">
+            <img src="assets/mentor 3.jpg" />
+          </div>
+
+          <div class="content">
+            <h2>Chino Sison</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              doloribus vitae fugit enim repudiandae
+            </p>
+          </div>
+        </div>
+        <div class="card-feature">
+          <div class="imgbox">
+            <img src="assets/mentor 2.jpg" />
+          </div>
+
+          <div class="content">
+            <h2>John Uy</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              doloribus vitae fugit enim repudiandae
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End: Feature Mentor Section -->
+
     <script src="index.js"></script>
   </body>
 </html>
