--- a/index.html
+++ b/index.html
@@ -549,14 +549,17 @@
     <!-- End: Counter Section -->
 
     <!-- Start: Feature Mentor Section -->
-    <section>
-      <h1 class="title" style="margin-top: 3%">Our Featured Mentors</h1>
+    <section class="mentor">
+      <h1 class="title" style="margin-top: 3%; padding-top: 2%">
+        Our Featured Mentors
+      </h1>
       <h4 style="color: white; text-align: center; font-weight: 300">
         <em>
           Great mentors don't just teach, they inspire, motivate, and guide you
           towards achieving your goals and realizing your full potential.
         </em>
       </h4>
+
       <div class="featured-mentor">
         <div class="card-feature">
           <div class="imgbox">
@@ -597,6 +600,21 @@
             </p>
           </div>
         </div>
+      </div>
+      <h4
+        style="
+          color: white;
+          text-align: center;
+          font-weight: 300;
+          margin-top: 1%;
+        "
+      >
+        <em>
+          Unlock Your Future and Achieve More with Our Exceptional Mentors!
+        </em>
+      </h4>
+      <div style="text-align: center; margin-bottom: 1%">
+        <a href="#" class="btn cta-mentor">View All</a>
       </div>
     </section>
     <!-- End: Feature Mentor Section -->
