modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
           </div>
         </div>
       </div>
-      <h4
+      <h3
         style="
           color: white;
           text-align: center;
@@ -609,12 +609,15 @@
           margin-top: 1%;
         "
       >
-        <em>
-          Unlock Your Future and Achieve More with Our Exceptional Mentors!
-        </em>
-      </h4>
-      <div style="text-align: center; margin-bottom: 1%">
-        <a href="#" class="btn cta-mentor">View All</a>
+        Unlock Your Future and Achieve More with Our Exceptional Mentors!
+      </h3>
+      <div>
+        <a
+          href="#"
+          class="btn cta-mentor"
+          style="text-align: center; margin-bottom: 2%"
+          >View All</a
+        >
       </div>
     </section>
     <!-- End: Feature Mentor Section -->
