modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
       <div class="featured-mentor">
         <div class="card-feature">
           <div class="imgbox">
-            <img src="assets/mentor 1.jpg" />
+            <img class="img-mentor" src="assets/mentor 1.jpg" />
           </div>
 
           <div class="content">
@@ -576,7 +576,7 @@
         </div>
         <div class="card-feature">
           <div class="imgbox">
-            <img src="assets/mentor 3.jpg" />
+            <img class="img-mentor" src="assets/mentor 3.jpg" />
           </div>
 
           <div class="content">
@@ -589,7 +589,7 @@
         </div>
         <div class="card-feature">
           <div class="imgbox">
-            <img src="assets/mentor 2.jpg" />
+            <img class="img-mentor" src="assets/mentor 2.jpg" />
           </div>
 
           <div class="content">
