modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -569,8 +569,12 @@
           <div class="content">
             <h2>Alex Seb</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-              doloribus vitae fugit enim repudiandae
+              Bachelor of Science in Chemical Engineering, University of the
+              Philippines Diliman. Alex is a driven individual who excels in
+              STEM fields. He is passionate about sharing her knowledge and
+              experiences to help students achieve their goals. With his
+              background in Chemical Engineering, he can guide students in
+              pursuing a career in science and technology.
             </p>
           </div>
         </div>
@@ -582,8 +586,12 @@
           <div class="content">
             <h2>Chino Sison</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-              doloribus vitae fugit enim repudiandae
+              Bachelor of Arts in English Literature, Ateneo de Manila
+              University. Chino is a wordsmith who believes in the power of
+              language and literature to transform lives. He has experience in
+              teaching and mentoring young adults, particularly in the field of
+              writing and communication. He can provide guidance to students who
+              aspire to excel in the arts and humanities.
             </p>
           </div>
         </div>
@@ -593,10 +601,14 @@
           </div>
 
           <div class="content">
-            <h2>John Uy</h2>
+            <h2>Mark Uy</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-              doloribus vitae fugit enim repudiandae
+              Bachelor of Science in Accountancy, De La Salle University. Mark
+              is an analytical thinker who has a passion for numbers and
+              finance. He is knowledgeable about business and financial
+              management, and can guide students who are interested in pursuing
+              a career in the field. Mark is committed to helping students
+              achieve succeed in their academic and professional pursuits.
             </p>
           </div>
         </div>
