modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -510,38 +510,36 @@
     <!-- end: What We Provide Section -->
 
     <!-- start: Counter Section -->
-    <section>
-      <div class="milestone-section">
-        <div class="row">
-          <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
-          <div class="col">
-            <div class="counter-box">
-              <i class="fa fa-users"></i>
-              <h2 class="counter">215</h2>
-              <h4>Students Helped</h4>
-            </div>
+    <section class="milestone-section">
+      <div class="row">
+        <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa fa-users"></i>
+            <h2 class="counter">215</h2>
+            <h4>Students Helped</h4>
           </div>
-          <div class="col">
-            <div class="counter-box">
-              <i class="fa fa-globe"></i>
-              <h2 class="counter">101</h2>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa fa-globe"></i>
+            <h2 class="counter">101</h2>
 
-              <h4>Partner Organizations</h4>
-            </div>
+            <h4>Partner Organizations</h4>
           </div>
-          <div class="col">
-            <div class="counter-box">
-              <i class="fa-solid fa-book-open-reader"></i>
-              <h2 class="counter">205</h2>
-              <h4>Scholarship Grants</h4>
-            </div>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa-solid fa-book-open-reader"></i>
+            <h2 class="counter">205</h2>
+            <h4>Scholarship Grants</h4>
           </div>
-          <div class="col">
-            <div class="counter-box">
-              <i class="fa-solid fa-graduation-cap"></i>
-              <h2 class="counter">105</h2>
-              <h4>Succesful Graduates</h4>
-            </div>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa-solid fa-graduation-cap"></i>
+            <h2 class="counter">105</h2>
+            <h4>Succesful Graduates</h4>
           </div>
         </div>
       </div>
@@ -550,15 +548,15 @@
 
     <!-- Start: Feature Mentor Section -->
     <section class="mentor">
-      <h1 class="title" style="margin-top: 3%; padding-top: 2%">
-        Our Featured Mentors
-      </h1>
-      <h4 style="color: white; text-align: center; font-weight: 300">
-        <em>
-          Great mentors don't just teach, they inspire, motivate, and guide you
-          towards achieving your goals and realizing your full potential.
-        </em>
-      </h4>
+      <div>
+        <h1 class="title-mentor">Our Featured Mentors</h1>
+        <h4 class="subtite-mentor">
+          <em>
+            Great mentors don't just teach, they inspire, motivate, and guide
+            you towards achieving your goals and realizing your full potential.
+          </em>
+        </h4>
+      </div>
 
       <div class="featured-mentor">
         <div class="card-feature">
