--- a/index.html
+++ b/index.html
@@ -548,13 +548,11 @@
 
     <!-- Start: Feature Mentor Section -->
     <section class="mentor">
-      <div>
+      <div class="featured-mentors">
         <h1 class="title-mentor">Our Featured Mentors</h1>
-        <h4 class="subtite-mentor">
-          <em>
-            Great mentors don't just teach, they inspire, motivate, and guide
-            you towards achieving your goals and realizing your full potential.
-          </em>
+        <h4 class="subtitle-mentor">
+          Great mentors don't just teach, they inspire, motivate, and guide you
+          towards achieving your goals and realizing your full potential.
         </h4>
       </div>
 
@@ -611,17 +609,18 @@
           </div>
         </div>
       </div>
-      <h3
-        style="
-          color: white;
-          text-align: center;
-          font-weight: 300;
-          margin-top: 1%;
-        "
-      >
-        Unlock Your Future and Achieve More with Our Exceptional Mentors!
-      </h3>
+
       <div>
+        <h3
+          style="
+            color: white;
+            text-align: center;
+            font-weight: 300;
+            margin-top: 1%;
+          "
+        >
+          Unlock Your Future and Achieve More with Our Exceptional Mentors!
+        </h3>
         <a
           href="#"
           class="btn cta-mentor"
