modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
         <a
           href="#"
           class="btn cta-mentor"
-          style="text-align: center; margin-bottom: 2%"
+          style="text-align: center; margin-bottom: 5%"
           >View All</a
         >
       </div>
@@ -632,7 +632,96 @@
     <!-- End: Feature Mentor Section -->
 
     <!-- Start: Success STories Section -->
-    <section></section>
+
+    <section class="stories">
+      <div class="story-title">
+        <h1 class="Success">Our Student's Success Stories</h1>
+        <h4 class="Guide">
+          <em>
+            With the right amount of guidance and motivation, every student can
+            be what their heart truly desired
+          </em>
+        </h4>
+      </div>
+
+      <div class="Students">
+        <div class="card-features">
+          <div class="row">
+            <div class="col">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h2></h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quaerat doloribus vitae fugit enim repudiandae
+                </p>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h2></h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quaerat doloribus vitae fugit enim repudiandae
+                </p>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h2></h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quaerat doloribus vitae fugit enim repudiandae
+                </p>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h2></h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quaerat doloribus vitae fugit enim repudiandae
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End: Success STories Section -->
 
     <script src="index.js"></script>
