modified:   index.html

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
         <h4 class="Guide">
           <em>
             With the right amount of guidance and motivation, every student can
-            be what their heart truly desired
+            be what their hearts truly desire.
           </em>
         </h4>
       </div>
