modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -646,8 +646,8 @@
 
       <div class="Students">
         <div class="card-features">
-          <div class="row">
-            <div class="col">
+          <div class="row row-stories">
+            <div class="col col-stories">
               <div class="Student-Card">
                 <img
                   src="Charles student success/image.png"
@@ -665,7 +665,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col col-stories">
               <div class="Student-Card">
                 <img
                   src="Charles student success/image.png"
@@ -683,7 +683,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col col-stories">
               <div class="Student-Card">
                 <img
                   src="Charles student success/image.png"
@@ -701,7 +701,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col col-stories">
               <div class="Student-Card">
                 <img
                   src="Charles student success/image.png"
