Added new resource images for the  success section and edited the existing files

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               </div>
 
               <div class="Student-content">
-                <h2></h2>
+                <h4 class=" py-3">Cindy De Vega </h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat doloribus vitae fugit enim repudiandae
@@ -668,14 +668,14 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image.png"
+                  src="Charles student success/image1.png"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
               </div>
 
               <div class="Student-content">
-                <h2></h2>
+                <h4 class=" py-3">Jann Christian Yu</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat doloribus vitae fugit enim repudiandae
@@ -686,14 +686,14 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image.png"
+                  src="Charles student success/image2.png"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
               </div>
 
               <div class="Student-content">
-                <h2></h2>
+                <h4 class=" py-3">Addison Stewart</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat doloribus vitae fugit enim repudiandae
@@ -704,14 +704,14 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image.png"
+                  src="Charles student success/image3.png"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
               </div>
 
               <div class="Student-content">
-                <h2></h2>
+                <h4 class=" py-3">Yosef Jam Singh</h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat doloribus vitae fugit enim repudiandae
