modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -633,6 +633,50 @@
 
     <!-- Start: Success STories Section -->
 
+    <section class="success-section">
+      <div class="story-title">
+        <h1 class="Success">Our Student's Success Stories</h1>
+        <h4 class="Guide">
+          <em>
+            With the right amount of guidance and motivation, every student can
+            be what their hearts truly desire.
+          </em>
+        </h4>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa fa-users"></i>
+            <h2 class="counter">215</h2>
+            <h4>Students Helped</h4>
+          </div>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa fa-globe"></i>
+            <h2 class="counter">101</h2>
+
+            <h4>Partner Organizations</h4>
+          </div>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa-solid fa-book-open-reader"></i>
+            <h2 class="counter">205</h2>
+            <h4>Scholarship Grants</h4>
+          </div>
+        </div>
+        <div class="col">
+          <div class="counter-box">
+            <i class="fa-solid fa-graduation-cap"></i>
+            <h2 class="counter">105</h2>
+            <h4>Succesful Graduates</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- End: Success STories Section -->
 
     <script src="index.js"></script>
