modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
     <!-- start: Counter Section -->
     <section class="milestone-section">
-      <div class="row">
+      <div class="row milestone-row">
         <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
         <div class="col">
           <div class="counter-box">
@@ -644,7 +644,7 @@
         </h4>
       </div>
 
-      <div class="row">
+      <div class="row milestone-row">
         <div class="col">
           <div class="counter-box">
             <i class="fa fa-users"></i>
