--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
     <!-- start: Counter Section -->
     <section class="milestone-section">
-      <div class="row milestone-row">
+      <div class="row" id="row-milestone">
         <h1 class="title" style="margin-top: 3%">Our Milestones</h1>
         <div class="col">
           <div class="counter-box">
@@ -633,7 +633,7 @@
 
     <!-- Start: Success STories Section -->
 
-    <section class="success-section">
+    <section class="stories">
       <div class="story-title">
         <h1 class="Success">Our Student's Success Stories</h1>
         <h4 class="Guide">
@@ -643,8 +643,102 @@
           </em>
         </h4>
       </div>
-    </section>
 
+      <div class="Students">
+        <div class="card-features">
+          <div class="row">
+            <div class="col col-stories">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h4 class="py-3">Cindy De Vega</h4>
+                <p>
+                  Cindy, a ScholarLink student, had a dream of attending a
+                  prestigious university. With the help of her mentor, she was
+                  able to create a strong academic plan, develop her leadership
+                  skills, and secure a full scholarship to her dream school.
+                  Cindy is now studying to become a doctor and is grateful for
+                  the support she received from ScholarLink.
+                </p>
+              </div>
+            </div>
+
+            <div class="col col-stories">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image1.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h4 class="py-3">Jann Christian Yu</h4>
+                <p>
+                  Jann, a ScholarLink mentee, was once a struggling high school
+                  student from an underprivileged community. Through the
+                  guidance and support of his mentor, Jann discovered his
+                  passion for science and pursued a degree in Biotechnology. He
+                  recently graduated with honors and is now working as a
+                  research assistant, paving the way for a better future for his
+                  family.
+                </p>
+              </div>
+            </div>
+
+            <div class="col col-stories">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image2.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h4 class="py-3">Addison Stewart</h4>
+                <p>
+                  Addison, a once struggling high school student, found new
+                  opportunities through ScholarLink's mentorship program. With
+                  the guidance of her mentor, she discovered her passion for
+                  biology and received valuable advice on college applications.
+                  Addison is now studying at a top university on a full
+                  scholarship and has a bright future ahead.
+                </p>
+              </div>
+            </div>
+
+            <div class="col col-stories">
+              <div class="Student-Card">
+                <img
+                  src="Charles student success/image3.png"
+                  class="featured-student img-fluid"
+                  alt="Graduates"
+                />
+              </div>
+
+              <div class="Student-content">
+                <h4 class="py-3">Yosef Jam Singh</h4>
+                <p>
+                  Yosef was struggling with his grades and had no clear plan for
+                  his future. ScholarLink connected him with a mentor who guided
+                  him through academic planning and career exploration. With the
+                  mentor's help, Yosef found his passion in computer science and
+                  secured a scholarship to a top university. He is now a
+                  successful software engineer.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End: Success STories Section -->
 
     <script src="index.js"></script>
