modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               </div>
 
               <div class="Student-content">
-                <h4 class="py-3">Cindy De Vega</h4>
+                <h4 class="py-3 student-name">Cindy Dela Vega</h4>
                 <p>
                   Cindy, a ScholarLink student, had a dream of attending a
                   prestigious university. With the help of her mentor, she was
@@ -679,7 +679,7 @@
               </div>
 
               <div class="Student-content">
-                <h4 class="py-3">Jann Christian Yu</h4>
+                <h4 class="py-3 student-name">Jann Christian Yu</h4>
                 <p>
                   Jann, a ScholarLink mentee, was once a struggling high school
                   student from an underprivileged community. Through the
@@ -702,7 +702,7 @@
               </div>
 
               <div class="Student-content">
-                <h4 class="py-3">Addison Stewart</h4>
+                <h4 class="py-3 student-name">Addison F Stewart</h4>
                 <p>
                   Addison, a once struggling high school student, found new
                   opportunities through ScholarLink's mentorship program. With
@@ -724,7 +724,7 @@
               </div>
 
               <div class="Student-content">
-                <h4 class="py-3">Yosef Jam Singh</h4>
+                <h4 class="py-3 student-name">Yosef Jam Singh</h4>
                 <p>
                   Yosef was struggling with his grades and had no clear plan for
                   his future. ScholarLink connected him with a mentor who guided
