modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
               <p
                 style="
                   text-align: justify;
-                  font-weight: 600;
+                  font-weight: 500;
                   margin-bottom: 24px;
+                  font-family: 'Rubik';
                 "
               >
                 We transform students' lives through mentorship and education.
@@ -615,8 +616,9 @@
           style="
             color: white;
             text-align: center;
-            font-weight: 300;
+            font-weight: 500;
             margin-top: 1%;
+            font-family: 'Rubik';
           "
         >
           Unlock Your Future and Achieve More with Our Exceptional Mentors!
