modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           <div class="counter-box">
             <i class="fa fa-users"></i>
             <h2 class="counter">215</h2>
-            <h4>Students Helped</h4>
+            <h4 style="color: #ffb100">Students Helped</h4>
           </div>
         </div>
         <div class="col">
@@ -526,21 +526,21 @@
             <i class="fa fa-globe"></i>
             <h2 class="counter">101</h2>
 
-            <h4>Partner Organizations</h4>
+            <h4 style="color: #ffb100">Partner Organizations</h4>
           </div>
         </div>
         <div class="col">
           <div class="counter-box">
             <i class="fa-solid fa-book-open-reader"></i>
             <h2 class="counter">205</h2>
-            <h4>Scholarship Grants</h4>
+            <h4 style="color: #ffb100">Scholarship Grants</h4>
           </div>
         </div>
         <div class="col">
           <div class="counter-box">
             <i class="fa-solid fa-graduation-cap"></i>
             <h2 class="counter">105</h2>
-            <h4>Succesful Graduates</h4>
+            <h4 style="color: #ffb100">Succesful Graduates</h4>
           </div>
         </div>
       </div>
