new file:   assets/grad1.jpeg 	new file:   assets/grad2.jpeg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image3.png"
+                  src="assets/grad1.jpeg"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
