--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScholarLink</title>
+    <link rel="stylesheet" href="jeff,success of stories/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -744,5 +745,52 @@
     <!-- End: Success STories Section -->
 
     <script src="index.js"></script>
+
+    <div class="slider">
+      <input type="radio" name="toggle" id="btn-1" checked>
+      <input type="radio" name="toggle" id="btn-2">
+      <input type="radio" name="toggle" id="btn-3">
+
+      <div class="slider-controls">
+          <label for="btn-1"></label>
+          <label for="btn-2"></label>
+          <label for="btn-3"></label>
+      </div>
+
+      <ul class="slides">
+          <li class="slide">
+              <div class="slide-content">
+                  <h2 class="slide-title">story #1</h2>
+                  <p class="slide-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dignissimos
+                      commodi eos totam perferendis possimus dolorem, deleniti vitae harum? Enim.</p>
+              </div>
+              <p class="slide-image">
+                  <img src="animalmemes14-5ae229b4ae9ab80037197fef.jpg" alt="stuff" width="320" height="240">
+              </p>
+          </li>
+          <li class="slide">
+              <div class="slide-content">
+                  <h2 class="slide-title">Story #2</h2>
+                  <p class="slide-text">Nisi ratione magni ea quis animi incidunt velit voluptate dolorem enim
+                      possimus, nam provident excepturi ipsam nihil molestiae minus delectus!</p>
+                  
+              </div>
+              <p class="slide-image">
+                  <img src="happy.jfif" alt="stuff" width="320" height="240">
+              </p>
+          </li>
+          <li class="slide">
+              <div class="slide-content">
+                  <h2 class="slide-title">Story #3</h2>
+                  <p class="slide-text">Quisquam quod ut quasi, vero obcaecati laudantium asperiores corporis ad
+                      atque. Expedita fugit dicta maxime vel doloribus sequi, facilis dignissimos.</p>
+                      
+              </div>
+              <p class="slide-image">
+                  <img src="nice 2.jpg" alt="stuff" width="320" height="240">
+              </p>
+          </li>
+      </ul>
+  </div>
   </body>
 </html>
